// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pending Renders default Pending message correctly 1`] = `
.c0 {
  font-size: 1.5rem;
  font-style: italic;
  color: #1982C4;
}

<p
  className="c0"
>
  Calculating scores
</p>
`;

exports[`Pending Renders large Pending message correctly 1`] = `
.c0 {
  padding: 3.5rem .5rem;
  font-size: 3.5rem;
  color: #333333;
}

<p
  className="c0"
>
  Calculating scores
</p>
`;
